<resources>
    <string name="intro_title">Rápido, seguro e\ndinâmico.</string>
    <string name="intro_subtitle">Com o AwayCard, você não passa mico na\nhora de pagar o entregador com o seu cartão\nnovo, e nem relembrando mais a senha.</string>
    <string name="intro_awaycard">AwayCard</string>
    <string name="intro_next_button">Vamos lá</string>
    <string name="already_card_register">Gostaria de já\ncadastrar um\ncartão?</string>
    <string name="lets_go">Vamos</string>
    <string name="save_for_next_time">Deixa pra próxima</string>
    <string name="lets_begin">Começar</string>
    <string name="skip">Pular</string>
    <string name="next">Próximo</string>
    <string name="nickname_hint">ex. Lêlê</string>
    <string name="how_name">Como gostaria de\nser chamado?</string>
</resources>