<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/square_intro_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AwayCardTextDefinition.IntroTitleDefinition"
        android:layout_marginStart="21dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="26dp"
        android:text="@string/intro_title"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AwayCardTextDefinition.IntroSubTitleDefinition"
        android:layout_marginStart="21dp"
        android:text="@string/intro_subtitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="49dp"
        style="@style/ButtonOutlineDefinition"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="20dp"
        android:text="@string/intro_next_button" />

</androidx.appcompat.widget.LinearLayoutCompat>